--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Created by .ignore support plugin (hsz.mobi)
+*.iml
 ### Maven template
 target/
 pom.xml.tag
@@ -24,6 +25,7 @@ buildNumber.properties
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+.idea/
 # Package Files #
 *.jar
 *.war
